--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,17 @@
   text-align: left;
 }
 
+.statTwo {
+  display: flex;
+  flex: 0.5;
+  background-color: #efefef;
+  border-radius: 5px;
+  padding: 10px;
+  flex-direction: row;
+  justify-content: space-around;
+  text-align: left;
+  margin-left: 20px;
+}
 .soneLeft {
   flex-direction: column;
 }
@@ -29,6 +40,7 @@
 }
 .tableStyle {
   width: 100%;
+  margin-top: 20px;
 }
 th,
 td {
@@ -37,7 +49,60 @@ td {
 }
 tr:hover {
   background-color: #e9edff;
-  font-size: "10px";
-  width: "40px";
-  border-radius: "5px";
+}
+
+.tableContain {
+  display: flex;
+  flex: 0.99;
+  flex-direction: column;
+}
+
+.modal-content {
+  padding-left: 20px !important;
+}
+
+h3 {
+  font-weight: 600;
+  font-size: 20px;
+  color: #6a78d4;
+}
+
+.tableStyle > thead {
+  background-color: #f0f2fb;
+  color: #6a78d4;
+}
+.greyFont {
+  font-size: 12px;
+  color: grey;
+}
+.statdata {
+  font-size: 25px;
+  font-weight: 550;
+}
+.boldFont {
+  font-size: 25px;
+  color: #56b8be;
+  font-weight: 900;
+}
+.textCol {
+  font-size: 11px;
+  margin-left: 5px;
+  text-align: left;
+  padding: 5px;
+}
+.textRow {
+  display: flex;
+  flex-direction: row;
+}
+.opp {
+  background-color: #e9edff;
+  font-size: 10px;
+  width: 40px;
+  border-radius: 5px;
+}
+.imageUsr {
+  width: 35px;
+  border-radius: 50px;
+  background-color: #e9edff;
+  margin-right: 10px;
 }
